--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">人像注册9011端口</string>
+    <string name="app_name">IEM客户端</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
